--- a/data/sources/frontendisti.yaml
+++ b/data/sources/frontendisti.yaml
@@ -27749,3 +27749,62 @@ series:
         url: https://www.meetup.com/frontendisti/events/288881300/
         dtstart: 2022-10-12 18:30:00+02:00
         dtend: 2022-10-12 20:30:00+02:00
+  - meetupcom:
+      meta_description: '**Pravidelný meetup komunity [Frontendisti.cz](http://frontendisti.cz/)**
+
+
+        **Program a místo budou upřesněny před konáním akce.**
+
+
+        Svoji přednášku můžeš přihlásit na odkazu'
+      og_title: 'Praha: únorový meetup | Frontendisti.cz, Wed, Feb 8, 2023, 6:30 PM   | Meetup'
+      url: https://www.meetup.com/frontendisti/events/288945727/
+      ical:
+        summary: 'Praha: únorový meetup | Frontendisti.cz'
+        description: 'Frontendisti.cz
+
+          Wednesday, February 8 at 6:30 PM
+
+
+          **Pravidelný meetup komunity (http://frontendisti.cz/)** **Program a místo budou upřesněny před konáním akce.** Svoji přednášku můžeš přihlásit na odk...
+
+
+          https://www.meetup.com/frontendisti/events/288945727/'
+        location: Menclova 2538 (Menclova 2538, Praha 8-Palmovka, Czech Republic 180 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288945727@meetup.com
+        url: https://www.meetup.com/frontendisti/events/288945727/
+        dtstart: 2023-02-08 18:30:00+01:00
+        dtend: 2023-02-08 20:30:00+01:00
+  - meetupcom:
+      meta_description: '**Pravidelný meetup komunity [Frontendisti.cz](http://frontendisti.cz/)**
+
+
+        **Program a místo budou upřesněny před konáním akce.**
+
+
+        Svoji přednášku můžeš přihlásit na odkazu'
+      og_title: 'Brno: březnový meetup | Frontendisti.cz, Wed, Mar 8, 2023, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/frontendisti/events/289061409/
+      ical:
+        summary: 'Brno: březnový meetup | Frontendisti.cz'
+        description: 'Frontendisti.cz
+
+          Wednesday, March 8 at 6:00 PM
+
+
+          **Pravidelný meetup komunity (http://frontendisti.cz/)** **Program a místo budou upřesněny před konáním akce.** Svoji přednášku můžeš přihlásit na odk...\n
+
+          https://www.meetup.com/frontendisti/events/289061409/'
+        location: Hněvkovského 65 (Hněvkovského 65, Komárov, Brno-Brno-jih, Czech Republic 617 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289061409@meetup.com
+        url: https://www.meetup.com/frontendisti/events/289061409/
+        dtstart: 2023-03-08 18:00:00+01:00
+        dtend: 2023-03-08 20:00:00+01:00
