--- a/data/sources/frontendisti.yaml
+++ b/data/sources/frontendisti.yaml
@@ -25720,9 +25720,9 @@ series:
         dtstart: 2022-11-09 18:00:00+01:00
         dtend: 2022-11-09 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Je to tu! Vaše pravidelná porce frontendů je zpět a bude to opět jízda, na kterou budete vzpomínat minimálně do příštího roku. Ano, tento rok to bude naše poslední pražská '
-      og_title: 'Praha: Funkcionální programování a Na co si dat pozor než příjmu nabídku, Wed, Nov 9, 2022, 6:30 PM   | Meetup'
-      url: https://www.meetup.com/frontendisti/events/288945626/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'Praha: Funkcionální programování a Na co si dat pozor než příjmu nabídku'
         description: 'Frontendisti.cz
