--- a/data/sources/czskppug.yaml
+++ b/data/sources/czskppug.yaml
@@ -10486,9 +10486,9 @@ series:
         dtstart: 2022-10-13 17:00:00+02:00
         dtend: 2022-10-13 19:00:00+02:00
   - meetupcom:
-      meta_description: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p
-      og_title: CZSK PPUG Meetup, Thu, Nov 10, 2022, 5:00 PM   | Meetup
-      url: https://www.meetup.com/czskppug/events/287184990/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: CZSK PPUG Meetup
         description: 'Czech and Slovak Power Platform User Group
