--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -20765,9 +20765,9 @@ series:
         dtstart: 2022-11-08 18:00:00+01:00
         dtend: 2022-11-08 22:00:00+01:00
   - meetupcom:
-      meta_description: '[ ](https://www.eventbrite.com/e/ios-meetup-modernization-persistence-prg-tickets-449449384207?aff=meetup)**[MAKE SURE TO SECURE A TICKET VIA EVENTBRITE, PLEASE](https://ww'
-      og_title: 'iOS Meetup: Modernization & Persistence PRG, Thu, Nov 10, 2022, 6:00 PM   | Meetup'
-      url: https://www.meetup.com/strv-meetups/events/289309509/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'iOS Meetup: Modernization & Persistence PRG'
         description: 'STRV Meetups
@@ -21912,3 +21912,56 @@ series:
         url: https://www.meetup.com/strv-meetups/events/289309373/
         dtstart: 2022-11-08 18:00:00+01:00
         dtend: 2022-11-08 22:00:00+01:00
+  - meetupcom:
+      meta_description: '**🔥 [PLEASE CLAIM YOUR FREE TICKET HERE](https://www.eventbrite.com/e/backend-meetup-how-we-build-backend-brn-tickets-464983557337?aff=meetup) 🔥**
+
+
+        Curious about how we b'
+      og_title: STRV Backend Meetup - How We Build Backend BRN, Tue, Nov 22, 2022, 6:00 PM   | Meetup
+      url: https://www.meetup.com/strv-meetups/events/289663618/
+      ical:
+        summary: STRV Backend Meetup - How We Build Backend BRN
+        description: 'STRV Meetups
+
+          Tuesday, November 22 at 6:00 PM
+
+
+          **🔥 (https://www.eventbrite.com/e/backend-meetup-how-we-build-backend-brn-tickets-464983557337?aff=meetup) 🔥** Curious about how we build backend solu...
+
+
+          https://www.meetup.com/strv-meetups/events/289663618/'
+        location: STRV (Přízova 284/5, Brno-střed, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289663618@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/289663618/
+        dtstart: 2022-11-22 18:00:00+01:00
+        dtend: 2022-11-22 22:00:00+01:00
+  - meetupcom:
+      meta_description: '**[🔥 PLEASE CLAIM YOUR FREE TICKET HERE 🔥](https://www.eventbrite.com/e/backend-meetup-how-we-build-backend-prg-tickets-464986867237?aff=meetup)**
+
+
+        Curious about how we b'
+      og_title: STRV Backend Meetup - How We Build Backend PRG, Thu, Nov 24, 2022, 6:00 PM   | Meetup
+      url: https://www.meetup.com/strv-meetups/events/289663632/
+      ical:
+        summary: STRV Backend Meetup - How We Build Backend PRG
+        description: 'STRV Meetups
+
+          Thursday, November 24 at 6:00 PM
+
+
+          **(https://www.eventbrite.com/e/backend-meetup-how-we-build-backend-prg-tickets-464986867237?aff=meetup)** Curious about how we build backend solution...\n
+
+          https://www.meetup.com/strv-meetups/events/289663632/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289663632@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/289663632/
+        dtstart: 2022-11-24 18:00:00+01:00
+        dtend: 2022-11-24 22:00:00+01:00
