--- a/data/sources/pyvo-praha.yaml
+++ b/data/sources/pyvo-praha.yaml
@@ -9484,10 +9484,10 @@ series:
         dtend: 2022-06-15 23:59:00+02:00
   - meetupcom:
       meta_description: Pyvo bude i v listopadu! Můžete se těšit na přednášku "Do your unit tests cover all edge cases?", a určitě dojde i na lightning talky. Potkáme se v kavárně Lajka v uzavřené
-      og_title: 'Pyvo Prague #138, Wed, Nov 16, 2022, 7:00 PM   | Meetup'
+      og_title: 'Pyvo Prague #138 - Do your unit tests cover all edge cases?, Wed, Nov 16, 2022, 7:00 PM   | Meetup'
       url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcpbvb/
       ical:
-        summary: 'Pyvo Prague #138'
+        summary: 'Pyvo Prague #138 - Do your unit tests cover all edge cases?'
         description: 'Pyvo: Prague Python Meetup
 
           Wednesday, November 16 at 7:00 PM
@@ -11361,6 +11361,30 @@ series:
         url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssyfcdbtb/
         dtstart: 2023-02-15 19:00:00+01:00
         dtend: 2023-02-15 23:59:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Pyvo Prague #137'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, October 19 at 7:00 PM
+
+
+          V říjnu se můžete těšit na prezentaci na téma AI Safety and Stampy, a určitě dojde i na lightning talky. Potkáme se v kavárně Lajka v uzavřeném salonk...
+
+
+          https://www.meetup.com/pyvo-prague-python-meetup/events/289047754/'
+        location: Café Lajka (U Akademie 366/11, Praha 7-Bubeneč, Czech Republic 170 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssydcnbzb@meetup.com
+        url: https://www.meetup.com/pyvo-prague-python-meetup/events/289047754/
+        dtstart: 2022-10-19 19:00:00+02:00
+        dtend: 2022-10-19 23:59:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
