--- a/data/sources/purestorage.yaml
+++ b/data/sources/purestorage.yaml
@@ -36363,3 +36363,99 @@ series:
         url: https://www.meetup.com/pure-storage-talks/events/286435658/
         dtstart: 2022-06-16 18:00:00+02:00
         dtend: 2022-06-16 19:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Golang Meetup by Pure Storage
+        description: 'Pure Storage Talks
+
+          Thursday, November 10 at 5:30 PM
+
+
+          Autumn is the traditional time for new beginnings - at least in terms of studies, so we decided to go ahead and let our next **Golang Meetup** to be f...
+
+
+          https://www.meetup.com/pure-storage-talks/events/289456196/'
+        location: Amazon Court (Rohanské nábř. 661/5, Rohanský ostrov, Praha-Praha 8, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289456196@meetup.com
+        url: https://www.meetup.com/pure-storage-talks/events/289456196/
+        dtstart: 2022-11-10 17:30:00+01:00
+        dtend: 2022-11-10 20:30:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Go Meetup
+        description: 'Pure Storage Talks
+
+          Wednesday, August 31 at 5:30 PM
+
+
+          Let’s have a cold beer at the next **Go MeetUp** and celebrate the last day of summer! Almost everyone has heard of Go and how it is used by now, but ...
+
+
+          https://www.meetup.com/pure-storage-talks/events/287928146/'
+        location: Amazon Court (Rohanské nábř. 661/5, Rohanský ostrov, Praha-Praha 8, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287928146@meetup.com
+        url: https://www.meetup.com/pure-storage-talks/events/287928146/
+        dtstart: 2022-08-31 17:30:00+02:00
+        dtend: 2022-08-31 20:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Stand out from the crowd. How to land a highly-paid technical job.
+        description: 'Pure Storage Talks
+
+          Thursday, June 30 at 5:30 PM
+
+
+          \\*\\*Make sure you book your spot at (https://www.eventbrite.com/e/stand-out-from-the-crowd-how-to-land-a-highly-paid-technical-job-registration-367486...
+
+
+          https://www.meetup.com/pure-storage-talks/events/286587285/'
+        location: Amazon Court (Rohanské nábř. 661/5, Rohanský ostrov, Praha-Praha 8, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286587285@meetup.com
+        url: https://www.meetup.com/pure-storage-talks/events/286587285/
+        dtstart: 2022-06-30 17:30:00+02:00
+        dtend: 2022-06-30 20:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Optimizing Go Meet Up
+        description: 'Pure Storage Talks
+
+          Thursday, June 16 at 6:00 PM
+
+
+          You are welcome to join us for the next Pure Storage Meet Up that will touch the topic of **Optimizing Go**. We’ll walk you through the basic tools Go...
+
+
+          https://www.meetup.com/pure-storage-talks/events/286435658/'
+        location: Amazon Court (Rohanské nábř. 661/5, Rohanský ostrov, Praha-Praha 8, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286435658@meetup.com
+        url: https://www.meetup.com/pure-storage-talks/events/286435658/
+        dtstart: 2022-06-16 18:00:00+02:00
+        dtend: 2022-06-16 19:30:00+02:00
