--- a/data/sources/pyvo-praha.yaml
+++ b/data/sources/pyvo-praha.yaml
@@ -9483,9 +9483,9 @@ series:
         dtstart: 2022-06-15 19:00:00+02:00
         dtend: 2022-06-15 23:59:00+02:00
   - meetupcom:
-      meta_description: Pyvo bude i v listopadu! Můžete se těšit na přednášku "Do your unit tests cover all edge cases?", a určitě dojde i na lightning talky. Potkáme se v kavárně Lajka v uzavřené
-      og_title: 'Pyvo Prague #138 - Do your unit tests cover all edge cases?, Wed, Nov 16, 2022, 7:00 PM   | Meetup'
-      url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcpbvb/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'Pyvo Prague #138 - Do your unit tests cover all edge cases?'
         description: 'Pyvo: Prague Python Meetup
@@ -9750,14 +9750,14 @@ series:
           We will meet for an informal chat about Python, programming, and more. Details will be added.
 
 
-          https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcqbcc/'
+          https://www.meetup.com/pyvo-prague-python-meetup/events/289798942/'
         location: Prague (, Prague, Czech Republic)
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_bcxlssydcqbcc@meetup.com
-        url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcqbcc/
+        url: https://www.meetup.com/pyvo-prague-python-meetup/events/289798942/
         dtstart: 2022-12-21 19:00:00+01:00
         dtend: 2022-12-21 23:59:00+01:00
   - meetupcom:
@@ -13281,3 +13281,27 @@ series:
         url: https://www.meetup.com/pyvo-prague-python-meetup/events/289047754/
         dtstart: 2022-10-19 19:00:00+02:00
         dtend: 2022-10-19 23:59:00+02:00
+  - meetupcom:
+      meta_description: We will meet for an informal chat about Python, programming, and more. Details will be added.
+      og_title: 'Pyvo Prague #, Wed, Mar 15, 2023, 7:00 PM   | Meetup'
+      url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssyfcfbtb/
+      ical:
+        summary: 'Pyvo Prague #'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, March 15 at 7:00 PM
+
+
+          We will meet for an informal chat about Python, programming, and more. Details will be added.
+
+
+          https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssyfcfbtb/'
+        location: Prague (, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssyfcfbtb@meetup.com
+        url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssyfcfbtb/
+        dtstart: 2023-03-15 19:00:00+01:00
+        dtend: 2023-03-15 23:59:00+01:00
