--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -16614,3 +16614,27 @@ series:
         url: https://www.meetup.com/typedb-prague/events/288455635/
         dtstart: 2022-10-20 18:30:00+02:00
         dtend: 2022-10-20 19:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Graph Databases vs TypeDB | What You Can't do With Graphs
+        description: 'TypeDB Prague Engineers
+
+          Thursday, October 20 at 6:30 PM
+
+
+          **Talk Synopsis**Developing with graph databases has a number of challenges, such as the modelling of complex schemas, and maintaining data consistenc...
+
+
+          https://www.meetup.com/typedb-prague/events/288455635/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288455635@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/288455635/
+        dtstart: 2022-10-20 18:30:00+02:00
+        dtend: 2022-10-20 19:30:00+02:00
