--- a/data/sources/ruby-praha.yaml
+++ b/data/sources/ruby-praha.yaml
@@ -8340,14 +8340,14 @@ series:
           Wednesday, December 7 at 7:00 PM
 
 
-          https://www.meetup.com/praguerb/events/dkmktfydcqbkb/'
+          https://www.meetup.com/praguerb/events/289815686/'
         location: null
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_dkmktfydcqbkb@meetup.com
-        url: https://www.meetup.com/praguerb/events/dkmktfydcqbkb/
+        url: https://www.meetup.com/praguerb/events/289815686/
         dtstart: 2022-12-07 19:00:00+01:00
         dtend: 2022-12-07 22:00:00+01:00
   - meetupcom:
@@ -11227,6 +11227,27 @@ series:
         url: https://www.meetup.com/praguerb/events/287188515/
         dtstart: 2022-08-03 19:00:00+02:00
         dtend: 2022-08-03 22:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: First Wednesday Of The Month - Ruby
+        description: 'Prague.rb / CSRUG
+
+          Wednesday, November 2 at 7:00 PM
+
+
+          https://www.meetup.com/praguerb/events/289094129/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_dkmktfydcpbdb@meetup.com
+        url: https://www.meetup.com/praguerb/events/289094129/
+        dtstart: 2022-11-02 19:00:00+01:00
+        dtend: 2022-11-02 22:00:00+01:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
