--- a/data/sources/prague-golang.yaml
+++ b/data/sources/prague-golang.yaml
@@ -40070,3 +40070,27 @@ series:
         url: https://www.meetup.com/prague-golang-meetup/events/286541748/
         dtstart: 2022-06-28 18:00:00+02:00
         dtend: 2022-06-28 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Go meetup #8'
+        description: 'Prague Golang Meetup
+
+          Tuesday, June 28 at 6:00 PM
+
+
+          Join us for our in-person and online meetup at Productboard HQ! We’re excited to host **Go Meetup** **8**!**🚨 Please (https://www.eventbrite.com/e/go-...
+
+
+          https://www.meetup.com/prague-golang-meetup/events/286541748/'
+        location: Productboard s.r.o. (Boudníkova 3, Praha 8-Palmovka, Czech Republic 180 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286541748@meetup.com
+        url: https://www.meetup.com/prague-golang-meetup/events/286541748/
+        dtstart: 2022-06-28 18:00:00+02:00
+        dtend: 2022-06-28 21:00:00+02:00
