--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -16977,3 +16977,27 @@ series:
         url: https://www.meetup.com/typedb-prague/events/289688135/
         dtstart: 2022-12-06 18:30:00+01:00
         dtend: 2022-12-06 19:30:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Loading Huge Amounts of Data
+        description: 'TypeDB Prague Engineers
+
+          Tuesday, November 22 at 6:30 PM
+
+
+          **Talk Synopsis**Loading a lot of data into a graph database is not a trivial exercise. (https://github.com/typedb-osi/typedb-loader) (formerly known ...
+
+
+          https://www.meetup.com/typedb-prague/events/289307884/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289307884@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/289307884/
+        dtstart: 2022-11-22 18:30:00+01:00
+        dtend: 2022-11-22 19:30:00+01:00
