--- a/data/sources/protest-cz.yaml
+++ b/data/sources/protest-cz.yaml
@@ -38959,3 +38959,50 @@ series:
         url: https://www.meetup.com/protest_cz/events/286604262/
         dtstart: 2022-06-21 18:00:00+02:00
         dtend: 2022-06-21 19:00:00+02:00
+  - meetupcom:
+      meta_description: Rádi bychom Vás pozvali na [pro:]TEST! Vánoční večírek, kde budete mít možnost se potkat s členy naší testerské skupiny, probrat testerská i netesterská témata a oslavit ko
+      og_title: '[pro:]TEST! Vánoční Večírek, Tue, Dec 13, 2022, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/protest_cz/events/289876583/
+      ical:
+        summary: '[pro:]TEST! Vánoční Večírek'
+        description: '[pro:]TEST!
+
+          Tuesday, December 13 at 6:00 PM
+
+
+          Rádi bychom Vás pozvali na TEST! Vánoční večírek, kde budete mít možnost se potkat s členy naší testerské skupiny, probrat testerská i netesterská tém...\n
+
+          https://www.meetup.com/protest_cz/events/289876583/'
+        location: Inventi Development Ltd. (Táborská 940/31, Praha 4-Nusle, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289876583@meetup.com
+        url: https://www.meetup.com/protest_cz/events/289876583/
+        dtstart: 2022-12-13 18:00:00+01:00
+        dtend: 2022-12-13 23:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: '111. [pro:]TEST! Panelová diskuse: Je automatizace bullshit? '
+        description: '[pro:]TEST!
+
+          Tuesday, November 22 at 6:00 PM
+
+
+          Automatizace testování. Pojem, který zná každý. Pojďme se na automatizaci podívat z jiného úhlu. Má opravdu smysl ji zavádět všude? Kdy se vyplatí a k...
+
+
+          https://www.meetup.com/protest_cz/events/289664915/'
+        location: tesena | SMART TESTING (Budějovická 1550, Praha 4-Michle, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289664915@meetup.com
+        url: https://www.meetup.com/protest_cz/events/289664915/
+        dtstart: 2022-11-22 18:00:00+01:00
+        dtend: 2022-11-22 19:00:00+01:00
