data: cron update

--- a/data/sources/msd-it.yaml
+++ b/data/sources/msd-it.yaml
@@ -30267,12 +30267,9 @@ series:
         dtstart: 2022-06-09 18:00:00+02:00
         dtend: 2022-06-09 20:00:00+02:00
   - meetupcom:
-      meta_description: '**Dark Side of Data Science – review of selected examples from famous book Weapons of Math Destruction.**
-
-
-        Algorithms, data science, machine learning and AI are the biggest'
-      og_title: Dark Side of Data Science - STUDENTS ONLY, Wed, Nov 23, 2022, 4:00 PM   | Meetup
-      url: https://www.meetup.com/msd-it-meet-ups/events/289474497/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Dark Side of Data Science - STUDENTS ONLY
         description: 'MSD IT Meet Ups
